SigmaCodebackup3rdSep/objects/Sales_Order_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Sales Order Allocations</relationshipLabel>
        <relationshipName>Sales_Order_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Sales Order Allocations</relationshipLabel>
        <relationshipName>Sales_Order_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Ready To Ship</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOA-{0}</displayFormat>
        <label>Sales Order Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>